# smart-agriculture-system

./: .gitignore  README.md
code/: Cargo.toml  loader.gdb  openocd.cfg
code/src/: main.rs
code/src/libraries/: mod.rs  moisture_sensor.rs
