[package]
name = "code"
version = "0.1.0"
authors = ["Rohith Balaji <me@therohith.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# ESSENTIALS
nb = "0.1.2"
cortex-m = "0.6.2"
cortex-m-rt = "0.6.11"
cortex-m-semihosting = "0.3.5"
# HAL LIBS
embedded-hal = "0.2.3"
embedded-graphics = "0.6.2"
panic-halt = "0.2.0"
# SENSOR LIBS
dht-hal-drv = "0.2.1"
ssd1306 = "0.4.0"
heapless = "0.5.1"

[dependencies.stm32f1xx-hal]
version = "0.6.1"
features = ["rt", "stm32f103", "medium"]

[profile.dev.package.cortex-m-rt]
opt-level = 0

# Optimize all the other dependencies
[profile.dev.package."*"]
opt-level = "z"